# velox

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  cookie_be.txt  rename_frontend.py  rename_vendor.py  reserve_be.json  test_backend.sh  test_flow.sh
apps/apigateway/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
apps/apigateway/api/: announcement_controller.go  (+24 more)
apps/database/: Dockerfile
apps/frontend/: .dockerignore  .eslintrc.cjs  AGENTS.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
apps/inventoryservice/: .dockerignore  Cargo.toml  Dockerfile
apps/orderservice/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
apps/projectionservice/: Dockerfile  go.mod  main.go
apps/seatservice/: Cargo.toml  Dockerfile
apps/seatservice/src/: db_client.rs  domain.rs  dtos.rs  expiry.rs  lib.rs  logging.rs  main.rs  processor.rs  signing.rs
apps/viewservice/: .dockerignore  Dockerfile  go.mod  go.sum  health.go  main.go  main_test.go
deploy/: broker.yaml  cache.yaml  database.yaml  dragonfly.yaml  networkpolicies.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  redpanda.yaml  serviceaccounts.yaml  services.yaml  topics.yaml
deploy/k8s/: services.yaml
docs/: api.md  architecture-consistency-security.md  architecture.md  business-rules.md  data-model.md  deployment.md  design-system.md  frontend.md  infrastructure.md  operational-edge-cases.md  security.md  thematic-functional-blueprint.md
pkg/pb/: velox.proto
scripts/: deploy.sh  failure-drill.sh  smoke.sh
(+121 files in other folders)
