[package]
name = "velox-seatservice"
version = "0.1.0"
edition = "2021"

[lib]
name = "seatservice"
path = "src/lib.rs"

[features]
default = ["kafka-static"]
kafka-dynamic = ["rdkafka/dynamic-linking"]
kafka-static = ["rdkafka/cmake-build"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "json", "uuid", "chrono"] }
rdkafka = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
